@@ -8,6 +8,7 @@ class Net::SSLeay::X509 : pointer {
   use Net::SSLeay::X509_NAME;
   use Net::SSLeay::EVP_MD;
   use Net::SSLeay::Constant as SSL;
+  use Net::SSLeay::ASN1_OBJECT;
   
   use Fn;
   
@@ -68,6 +69,8 @@ class Net::SSLeay::X509 : pointer {
   }
   
   native method get_ext_by_NID : int ($nid : int, $lastpos : int);
+  
+  native method get_ext_by_OBJ : int ($obj : Net::SSLeay::ASN1_OBJECT, $lastpos : int);
   
   native method DESTROY : void ();
   
